        - added note to PWM FAQ section that root access is needed (link to sudo
          config section) (closes #158)
        - added meta_key_check() class method in Meta, to check whether a shared
          memory segment exists or not
        - pimeta and pimetaerase scripts now croak if the shared memory segment
          we're trying to work on don't yet exist (fixes #156)

2.3633_02 2019-09-21
        - TRIAL RELEASE: may not install properly, and there's a potential for
          shared memory corruption in certain circumstances
        - all methods that use GPIO pins now supply an appropriate comment for
          each pin for identification in shared memory (closes #110)
        - all the OLED tests now get the display object through a Pi object, as
          opposed to through the class (closes #124)
        - UUID in shared memory now has a href value, containing proc and label
          (closes #131)
        - when setting a new object in shared storage, we ensure there are no
          duplicate UUIDs present before assignment (closes #130)
        - all calls through WiringPi::API now use the C function directly as
          opposed to the Perl functions (closes #128)
        - multi-object, multi-script/proc tests are now automated within the
          test suite (as t/112 (good) and t/113 (die)) (closes #132)
        - added SIGINT multi test files
        - added meta_locks(). Manages shared memory lock section
        - serial Arduino OLED display now displays the current test file number
          (closes #106)
        - items that used environment variables to store data are now located
          within the shared memory storage (closes #129)
        - most modules are now only loaded if they are used (closes #135)
        - add blurb in FAQ that if running scripts from crontab, the RemoveIPC
          flag in logind.conf must be set to "no" so shared memory semaphores
          don't get removed upon user logoff (closes #138)